# checkpointassignment

./: .env_template  .gitignore  README.md  docker-compose.yml  init.sql
DLP/: Dockerfile  api_client.py  main.py  pyproject.toml  tasks.py
DLP/tests/: test_manager.py  test_tasks.py
backend/: Dockerfile  pyproject.toml
backend/django_backend/: auth.py  settings.py  tests.py  urls.py
backend/myapp/: admin.py  models.py  slack.py  sqs.py  urls.py  views.py  webhooks.py
backend/myapp/migrations/: 0001_initial.py  0002_caughtmessage_channel_caughtmessage_ts.py
backend/myapp/tests/: test_views.py
queue/: Dockerfile  custom.conf
