[tool.poetry]
name = "dlp"
version = "0.1.0"
description = ""
authors = ["Piotr Truty"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aioboto3 = "^13.2.0"
aiobotocore = "^2.15.2"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
